# mygit

./: .gitignore  CMakeLists.txt  README.md  example_calib.yml  offset.json  offset_cfg.json  offset_cfg2.json  offset_m_median.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
src/: headless_runner.cpp  lane_detector.cpp  lane_detector.h  main.cpp
tests/: pxm_test.cpp
tools/: generate_test_image.py
